hphp/hack/test/typecheck/bad_type_structure_nullable.php.exp
File "bad_type_structure_nullable.php", line 4, characters 3-22:
  TypeStructureKind
File "bad_type_structure_nullable.php", line 5, characters 3-23:
  ?string
File "bad_type_structure_nullable.php", line 6, characters 3-22:
  ?string
File "bad_type_structure_nullable.php", line 7, characters 3-26:
  bool
File "bad_type_structure_nullable.php", line 10, characters 3-27:
  err
File "bad_type_structure_nullable.php", line 11, characters 3-28:
  err
File "bad_type_structure_nullable.php", line 12, characters 3-24:
  err
File "bad_type_structure_nullable.php", line 13, characters 3-29:
  err
File "bad_type_structure_nullable.php", line 14, characters 3-29:
  err
File "bad_type_structure_nullable.php", line 15, characters 3-31:
  err
File "bad_type_structure_nullable.php", line 18, characters 3-22:
  TypeStructureKind
File "bad_type_structure_nullable.php", line 22, characters 3-22:
  TypeStructureKind
File "bad_type_structure_nullable.php", line 23, characters 3-23:
  ?string
File "bad_type_structure_nullable.php", line 24, characters 3-22:
  ?string
File "bad_type_structure_nullable.php", line 25, characters 3-26:
  bool
File "bad_type_structure_nullable.php", line 28, characters 3-27:
  err
File "bad_type_structure_nullable.php", line 29, characters 3-28:
  err
File "bad_type_structure_nullable.php", line 30, characters 3-24:
  err
File "bad_type_structure_nullable.php", line 31, characters 3-29:
  err
File "bad_type_structure_nullable.php", line 32, characters 3-29:
  err
File "bad_type_structure_nullable.php", line 33, characters 3-31:
  ?vec<_>
File "bad_type_structure_nullable.php", line 36, characters 3-22:
  TypeStructureKind
File "bad_type_structure_nullable.php", line 10, characters 15-25:
The field `classname` is undefined (Typing[4108])
  File "typestructure.hhi", line 55, characters 29-698:
  Definition is here
File "bad_type_structure_nullable.php", line 11, characters 15-26:
The field `elem_types` is undefined (Typing[4108])
  File "typestructure.hhi", line 55, characters 29-698:
  Definition is here
File "bad_type_structure_nullable.php", line 12, characters 15-22:
The field `fields` is undefined (Typing[4108])
  File "typestructure.hhi", line 55, characters 29-698:
  Definition is here
File "bad_type_structure_nullable.php", line 13, characters 15-27:
The field `param_types` is undefined (Typing[4108])
  File "typestructure.hhi", line 55, characters 29-698:
  Definition is here
File "bad_type_structure_nullable.php", line 14, characters 15-27:
The field `return_type` is undefined (Typing[4108])
  File "typestructure.hhi", line 55, characters 29-698:
  Definition is here
File "bad_type_structure_nullable.php", line 15, characters 15-29:
The field `generic_types` is undefined (Typing[4108])
  File "typestructure.hhi", line 55, characters 29-698:
  Definition is here
File "bad_type_structure_nullable.php", line 28, characters 15-25:
The field `classname` is undefined (Typing[4108])
  File "typestructure.hhi", line 55, characters 29-698:
  Definition is here
File "bad_type_structure_nullable.php", line 29, characters 15-26:
The field `elem_types` is undefined (Typing[4108])
  File "typestructure.hhi", line 55, characters 29-698:
  Definition is here
File "bad_type_structure_nullable.php", line 30, characters 15-22:
The field `fields` is undefined (Typing[4108])
  File "typestructure.hhi", line 55, characters 29-698:
  Definition is here
File "bad_type_structure_nullable.php", line 31, characters 15-27:
The field `param_types` is undefined (Typing[4108])
  File "typestructure.hhi", line 55, characters 29-698:
  Definition is here
File "bad_type_structure_nullable.php", line 32, characters 15-27:
The field `return_type` is undefined (Typing[4108])
  File "typestructure.hhi", line 55, characters 29-698:
  Definition is here
